--- a/src/components/TabButton/TabButton.css
+++ b/src/components/TabButton/TabButton.css
@@ -1,11 +1,3 @@
-/* Container for the tab buttons */
-.tab-buttons-container {
-  display: flex;
-  justify-content: center;
-  gap: 10px;
-  margin: 20px 0;
-}
-
 /* Styles for each button */
 .tab-button {
   padding: 10px 20px;
@@ -17,4 +9,14 @@
   border-radius: 5px;
   cursor: pointer;
   transition: all 0.3s ease;
+}
+
+.tab-button:hover {
+  background-color: #00cccc;
+}
+
+.tab-button.active {
+  background-color: #007bff;
+  color: white;
+  font-weight: bold;
 }
